--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# ignore kernels if they ended up in this directory
+kernel-*
+
+# ignore downloaded sources and binaries
+build/
+src/
+bundler/build/
