--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ go:
 
 stages:
   - name: build
-    if: branch = master
 
 jobs:
   include:
@@ -16,12 +15,15 @@ jobs:
       dist: bionic
       before_script:
         - make dependencies
+        - go get -u gopkg.in/yaml.v2
       script:
         - if [ -z "$TRAVIS_TAG" ]; then export BUNDLE_VERSION=99.99.99; else export BUNDLE_VERSION=$TRAVIS_TAG; fi;
+        - echo $TRAVIS_TAG
+        - export GOBINARYDIR=/home/travis/gopath/bin/
         - make bundle
         - if [ ! -z "$TRAVIS_TAG" ]; then echo $GKEY > gkey64; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then base64 -d ./gkey64 > ./gkey; fi;
-        - if [ ! -z "$TRAVIS_TAG" ]; then gcloud auth authenticate-service-account --key-file ./gkey; fi;
+        - if [ ! -z "$TRAVIS_TAG" ]; then gcloud auth activate-service-account --key-file ./gkey; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then go run misc/ci/main.go -tag ${BUNDLE_VERSION} -kernel-source kernels; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then echo $KEY_PUB > key.pub1 && base64 -d ./key.pub1 > ./key.pub; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then echo $KEY_PRIV > key.priv1 && base64 -d ./key.priv1 > ./key.priv; fi;
