--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
         -  echo $GKEY > ./gkey64 && md5sum ./gkey64
         - if [ ! -z "$TRAVIS_TAG" ]; then base64 -d ./gkey64 > ./gkey; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then gcloud auth activate-service-account --key-file ./gkey; fi;
-        - make bundle
+        - make bundle BUNDLE_VERSION=$BUNDLE_VERSION
         - if [ ! -z "$TRAVIS_TAG" ]; then go run misc/ci/main.go -tag ${BUNDLE_VERSION} -kernel-source kernels; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then echo $KEY_PUB > key.pub1 && base64 -d ./key.pub1 > ./key.pub; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then echo $KEY_PRIV > key.priv1 && base64 -d ./key.priv1 > ./key.priv; fi;
