Fix environment variable substitution to the firecracker-vmlinux upload

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
         - if [ ! -z "$TRAVIS_TAG" ]; then gpg --armor --local-user $KEY_ID --detach-sig kernel-$BUNDLE_VERSION; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then gsutil cp kernel-$BUNDLE_VERSION $GSUTIL_BASE/kernels/kernel-$BUNDLE_VERSION; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then gsutil cp kernel-$BUNDLE_VERSION.asc $GSUTIL_BASE/kernels/kernel-$BUNDLE_VERSION.asc; fi;
-        - if [ ! -z "$TRAVIS_TAG" ]; then gsutil cp src/linux/vmlinux gs://vorteil-dl/firecracker-vmlinux/firecracker-$BUNDLEVERSION; fi;
+        - if [ ! -z "$TRAVIS_TAG" ]; then gsutil cp src/linux/vmlinux gs://vorteil-dl/firecracker-vmlinux/firecracker-$BUNDLE_VERSION; fi;
         - if [ ! -z "$TRAVIS_TAG" ]; then gsutil cp manifest.txt $GSUTIL_BASE/manifest.txt; fi;
       deploy:
         provider: releases
