--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get -y install make
           #make dependencies
           echo "RV value $RV"
-          if [ "$RV" == "main" ] || [ "$RV" == "" ] ; then export RV=99.99.99; fi
+          if [ "$RV" == "master" ] || [ "$RV" == "" ] ; then export RV=99.99.99; fi
           if [ "$RV" != "99.99.99" ]; then cd misc/ci/ && go run main.go -tag ${RV} -kernel-source kernels  && cp manifest.txt ../.. && cd ../..; fi
           if [ "$RV" != "99.99.99" ]; then echo $KEY_PUB > key.pub1 && base64 -d ./key.pub1 > ./key.pub; fi;
           if [ "$RV" != "99.99.99" ]; then echo $KEY_PRIV > key.priv1 && base64 -d ./key.priv1 > ./key.priv; fi;
